--- a/Pyspark/IDNCLIPR.ipynb
+++ b/Pyspark/IDNCLIPR.ipynb
@@ -468,7 +468,9 @@
     "        df_tabela_anterior.loc[last_idx, \"IDNCLIPR\"] = \",\".join(str(val) for val in temp)\n",
     "\n",
     "# Salvar o DataFrame resultante\n",
-    "df_tabela_anterior\n"
+    "df_tabela_anterior\n",
+    "\n",
+    "#teste para commit\n"
    ]
   },
   {
